# cmake-avr

./: generic-gcc-avr.cmake
example/: CMakeLists.txt
example-c++/: CMakeLists.txt
